--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -32,6 +32,71 @@
       }
     }
   }
+
+  .two-slider {
+    &__slider-item {
+      margin-left: 35px;
+      margin-right: 35px;
+      height: 510px !important;
+      &:before {
+        height: 370px;
+      }
+      &.slick-current {
+        .two-slider__item-img {
+          height: 510px !important;
+        }
+      }
+    }
+
+    &__item-img {
+      height: 370px !important;
+    }
+
+    &__inner {
+      right: -40px;
+      bottom: 40px;
+      padding: 55px 60px;
+    }
+
+    &__inner-text {
+      margin-left: 10px;
+      font-size: 25px;
+    }
+  }
+
+  .cross {
+    &__card {
+      padding: 20px;
+    }
+
+    &__card-left {
+      margin-right: 15px;
+    }
+    &__card-right {
+      margin-left: 15px;
+    }
+
+    &__card-center {
+      margin-bottom: 15px;
+      margin-top: 15px;
+    }
+
+    &__card-text {
+      margin-top: 15px;
+    }
+  }
+
+  .we-offer {
+    padding-top: 80px;
+  }
+
+  .about-main,
+  .cross,
+  .we-offer,
+  .two-slider__slider,
+  .we-offer__items {
+    margin-top: 120px;
+  }
 }
 
 @media (max-width: 1023px) {
@@ -107,6 +172,89 @@
       display: block;
     }
   }
+
+  .two-slider {
+    &__title {
+      color: #fff;
+      margin-bottom: 80px;
+    }
+
+    &__slider-item {
+      margin-left: 25px;
+      margin-right: 25px;
+      height: 410px !important;
+      &:before {
+        height: 300px;
+      }
+      &.slick-current {
+        .two-slider__item-img {
+          height: 410px !important;
+        }
+      }
+    }
+
+    &__item-img {
+      height: 300px !important;
+    }
+  }
+
+  .standart-pre-title {
+    margin-bottom: 30px;
+  }
+
+  .standart-title {
+    font-size: 40px;
+  }
+
+  .cross {
+    padding-bottom: 60px;
+    &__wrapper {
+      flex-direction: column;
+    }
+
+    &__wrapper-center {
+      display: flex;
+    }
+
+    &__card {
+      width: 50%;
+    }
+
+    &__card-left {
+      margin-right: 0px;
+    }
+    &__card-right {
+      margin-left: 0px;
+    }
+
+    &__card-center {
+      &:first-child {
+        margin-right: 7px;
+      }
+      &:last-child {
+        margin-left: 7px;
+      }
+    }
+  }
+
+  .we-offer {
+    padding-top: 60px;
+  }
+
+  .about-main,
+  .cross,
+  .we-offer,
+  .two-slider__slider,
+  .we-offer__items {
+    margin-top: 80px;
+  }
+
+  .about-main.about-us {
+    padding-top: 130px;
+  }
+  .two-slider.about-us {
+    margin-top: 80px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -133,6 +281,28 @@
       }
     }
   }
+
+  .two-slider {
+    &__inner {
+      right: -20px;
+      bottom: 20px;
+      padding: 40px 50px;
+    }
+
+    &__inner-text {
+      margin-left: 10px;
+      font-size: 22px;
+    }
+
+    &__inner-icon {
+      width: 25px;
+      height: 25px;
+    }
+    &__inner-link {
+      bottom: 10px;
+      right: 10px;
+    }
+  }
 }
 
 @media (max-width: 766px) {
@@ -143,6 +313,232 @@
 
     &__img {
       height: 550px !important;
+    }
+  }
+
+  .two-slider {
+    &__title {
+      margin-bottom: 30px;
+    }
+
+    &__counter {
+      display: none;
+    }
+
+    &__slider-item {
+      margin-left: 15px;
+      margin-right: 15px;
+      position: relative;
+    }
+
+    &__inner {
+      right: 0px;
+      bottom: 0px;
+      padding: 33px 35px;
+    }
+
+    &__inner-text {
+      margin-left: 7px;
+      font-size: 20px;
+    }
+
+    &__inner-icon {
+      width: 22px;
+      height: 22px;
+    }
+    &__inner-link {
+      bottom: 6px;
+      right: 6px;
+    }
+  }
+
+  .standart-title {
+    font-size: 30px;
+    line-height: 120%;
+  }
+
+  .cross {
+    padding-bottom: 40px;
+    &__wrapper {
+      display: block;
+    }
+
+    &__wrapper-center {
+      display: block;
+    }
+
+    &__card {
+      width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &__card-text {
+      min-height: 120px;
+    }
+
+    &__card-center {
+      &:first-child {
+        margin-right: auto;
+      }
+      &:last-child {
+        margin-left: auto;
+      }
+    }
+
+    &__brand-cyrcle {
+      max-width: 85px;
+      height: 85px;
+      margin-right: 12px;
+    }
+
+    &__brand {
+      max-width: 65px;
+    }
+  }
+
+  .about-main {
+    &__df {
+      display: block;
+    }
+
+    &__text {
+      width: 100%;
+    }
+
+    &__link {
+      max-width: 256px;
+      width: 100%;
+      margin-left: 0px;
+      height: 70px;
+      padding-left: 10px;
+      padding-right: 10px;
+      margin-top: 30px;
+    }
+
+    &__link-icon {
+      margin-right: 10px;
+    }
+  }
+
+  .we-offer {
+    &__item {
+      margin-bottom: 40px;
+      margin-left: 0px;
+      margin-right: 0px;
+    }
+
+    &__icon {
+      max-width: 62px;
+    }
+
+    &__text {
+      margin-top: 16px;
+      margin-bottom: 0;
+    }
+  }
+
+  .we-offer {
+    padding-top: 40px;
+  }
+
+  .about-main,
+  .cross,
+  .we-offer,
+  .two-slider__slider,
+  .we-offer__items {
+    margin-top: 60px;
+  }
+
+  .two-slider {
+    padding-bottom: 80px;
+  }
+
+  .about-main.about-us {
+    .about-main__text {
+      &:first-child {
+        margin-right: 0px;
+      }
+      &:last-child {
+        margin-left: 0px;
+      }
+    }
+  }
+
+  .two-slider.about-us{
+    margin-top: 60px;
+}
+}
+
+@media (max-width: 500px) {
+  .cross {
+    &__card {
+      width: 100%;
+    }
+
+    &__brand-cyrcle {
+      max-width: 75px;
+      height: 75px;
+      margin-right: 10px;
+    }
+
+    &__brand {
+      max-width: 60px;
+    }
+
+    &__brand-name {
+      margin-bottom: 8px;
+    }
+
+    &__brand-descr {
+      margin-top: 8px;
+      line-height: 120%;
+    }
+  }
+
+  .two-slider {
+    &__slider-item {
+      height: 290px !important;
+
+      &.slick-current {
+        .two-slider__item-img {
+          height: 290px !important;
+        }
+      }
+    }
+
+    &__btn {
+      &:before {
+        width: 20px;
+      }
+    }
+
+    &__prev {
+      margin-left: 30px;
+      &:before {
+        right: calc(100% + 5px);
+      }
+    }
+
+    &__next {
+      margin-right: 30px;
+      &:before {
+        left: calc(100% + 5px);
+      }
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .two-slider {
+    &__slider-item {
+      height: 200px !important;
+
+      &.slick-current {
+        .two-slider__item-img {
+          height: 200px !important;
+        }
+      }
     }
   }
 }
