--- a/scss/style.scss
+++ b/scss/style.scss
@@ -251,15 +251,14 @@
   }
 }
 
-@import "media";
-
 .two-slider {
   background: #161616;
-  padding-top: 200px;
-  padding-bottom: 200px;
+  padding-top: 40px;
+  padding-bottom: 170px;
   &__slider {
     transition: all 0.5s;
     width: 100%;
+    margin-top: 200px;
   }
 
   &__slider-item {
@@ -269,7 +268,6 @@
     height: 610px !important;
     display: flex !important;
     align-items: center !important;
-    overflow: hidden !important;
     transition: all 0.5s;
     position: relative;
     &:before {
@@ -292,6 +290,10 @@
         opacity: 0;
         transition: all 0.5s;
       }
+
+      .two-slider__inner {
+        opacity: 1;
+      }
     }
   }
 
@@ -309,7 +311,6 @@
     width: 230px;
     margin-left: auto;
     margin-right: auto;
-   
   }
 
   &__current-slide {
@@ -328,47 +329,284 @@
     color: #616161;
   }
 
-
   &__bottom {
     margin-top: 45px;
     display: flex;
     justify-content: space-between;
   }
 
-  
   &__btn {
     letter-spacing: 0.15em;
-color: #B7A179;
-position: relative;
-cursor: pointer;
-&:before{
-  position: absolute;
-  content: '';
-  top: 50%;
-  transform: translateY(-50%);
-  width: 35px;
-  height: 1px;
-  background: #B7A179;
-}
+    color: #b7a179;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.3s;
+    &:before {
+      position: absolute;
+      content: "";
+      top: 50%;
+      transform: translateY(-50%);
+      width: 35px;
+      height: 1px;
+      background: #b7a179;
+      transition: all 0.3s;
+    }
+    &.my-disabled {
+      color: #f0eee9;
+      &:before {
+        background: #f0eee9;
+      }
+    }
   }
 
   &__prev {
-    &:before{
-right: calc(100% + 10px);
+    margin-left: 45px;
+    &:before {
+      right: calc(100% + 10px);
     }
   }
-
 
   &__next {
-    &:before{
-    left: calc(100% + 10px);
+    margin-right: 45px;
+    &:before {
+      left: calc(100% + 10px);
     }
   }
 
+  &__inner {
+    width: max-content;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    bottom: 80px;
+    right: -70px;
+    padding: 65px 100px;
+    background: #b7a179;
+    transition: all 0.5s;
+    box-sizing: border-box;
+    opacity: 0;
+  }
 
-  .slick-arrow{
+  &__inner-text {
+    display: block;
+    margin-left: 15px;
+    font-weight: 300;
+    font-size: 30px;
+    letter-spacing: 0.08em;
+    color: #161616;
+  }
+
+  &__inner-link {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    letter-spacing: 0.15em;
+    color: #585858;
+    transition: all 0.5s;
+    &:hover {
+      color: #f0eee9;
+      outline: none;
+    }
+  }
+
+  .slick-arrow {
     position: absolute;
     opacity: 0;
     z-index: -1;
-      }
+  }
+
+  &__title {
+    color: #fff;
+    margin-bottom: 150px;
+  }
 }
+
+.cross {
+  margin-top: 190px;
+  padding-bottom: 100px;
+  position: relative;
+  &__wrapper {
+    display: flex;
+    align-items: center;
+  }
+
+  &__card {
+    background: #202424;
+    box-sizing: border-box;
+    padding: 40px;
+  }
+
+  &__card-left {
+    margin-right: 30px;
+  }
+  &__card-right {
+    margin-left: 30px;
+  }
+
+  &__card-center {
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
+
+  &__card-text {
+    margin-top: 30px;
+    font-family: Rubik;
+    font-style: italic;
+    font-weight: 300;
+    line-height: 170%;
+    color: #ffffff;
+    height: 180px;
+  }
+
+  &__brand-cont {
+    margin-top: 15px;
+    display: flex;
+    align-items: center;
+  }
+
+  &__brand-cyrcle {
+    max-width: 105px;
+    width: 100%;
+    height: 105px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 100%;
+    background: #fff;
+    margin-right: 18px;
+    overflow: hidden;
+  }
+
+  &__brand {
+    max-width: 90px;
+    width: 100%;
+  }
+
+  &__brand-name {
+    font-weight: bold;
+    color: #ffffff;
+  }
+
+  &__brand-descr {
+    font-size: 16px;
+    line-height: 150%;
+    color: #b7a179;
+  }
+}
+
+.about-main {
+  margin-top: 185px;
+  margin-bottom: 0px;
+  &__df {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+
+  &__text {
+    width: 50%;
+    line-height: 150%;
+    color: #3d3d3d;
+    margin-bottom: 0;
+  }
+
+  &__link {
+    max-width: 306px;
+    width: 100%;
+    margin-left: 30px;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #b7a179;
+    box-sizing: border-box;
+    justify-content: center;
+    outline: none;
+    transition: all 0.5s;
+    padding-left: 20px;
+    padding-right: 20px;
+    &:hover {
+      border: 1px solid #3d3d3d;
+      svg path {
+        fill: #3d3d3d;
+      }
+      span {
+        color: #3d3d3d;
+      }
+    }
+  }
+
+  &__link-icon {
+    margin-right: 20px;
+    display: block;
+    svg path {
+      transition: all 0.5s;
+    }
+  }
+
+  &__link-text {
+    letter-spacing: 0.15em;
+    transition: all 0.5s;
+    color: #b7a179;
+  }
+}
+
+.we-offer {
+  margin-top: 185px;
+  padding-top: 100px;
+  &__title {
+    color: #ffffff;
+  }
+
+  &__items {
+    margin-top: 180px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__item {
+    margin-bottom: 100px;
+    max-width: 530px;
+    width: 100%;
+    margin-left: 15px;
+    margin-right: 15px;
+  }
+
+  &__icon {
+    max-width: 82px;
+    width: 100%;
+  }
+
+  &__text {
+    margin-top: 36px;
+    line-height: 150%;
+    color: rgba(255, 255, 255, 0.9);
+  }
+}
+
+
+.about-main.about-us{
+  margin-top: 0;
+  padding-top: 230px;
+  .about-main__text{
+&:first-child{
+  margin-right: 15px;
+}
+&:last-child{
+  margin-left: 15px;
+}
+  }
+  .about-main__df{
+align-items: flex-start
+  }
+}
+
+.two-slider.about-us{
+  margin-top: 180px;
+
+  .slick-slider {
+margin-top: 60px;
+  }
+}
+@import "media";
