--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -3,8 +3,8 @@
 * {
   font-family: "Monda";
   font-style: normal;
-  font-weight: normal;
   font-size: 18px;
+  font-weight: 400;
 }
 
 .my-container {
