--- a/scss/style.scss
+++ b/scss/style.scss
@@ -239,7 +239,7 @@
 
   .slick-dots {
     position: absolute;
-    bottom: 0;
+    bottom: 40px;
     right: 70px;
     display: flex !important;
 
