--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -131,7 +131,7 @@
     }
 
     &__menu-item {
-      width: 230px;
+      // width: 230px;
       margin-left: 0px;
       margin-bottom: 46px;
     }
@@ -140,6 +140,7 @@
     &__menu-text {
       display: block;
       width: max-content;
+    
     }
 
     &__drop-cont {
@@ -174,6 +175,23 @@
 
     &__burger {
       display: block;
+    }
+
+    &__drop-cont {
+
+  
+      // &:hover {
+      //   .header__dropdown {
+      //     opacity: 0;
+      //     z-index: 0;
+      //     transform: translateY(-100%);
+      //   }
+      //   .header__menu-text {
+      //     &:before {
+      //       transform: translateY(-50%) rotate(0deg);
+      //     }
+      //   }
+      // }
     }
   }
 
@@ -232,11 +250,13 @@
     }
 
     &__card-center {
+      margin-top: 30px;
+      margin-bottom: 30px;
       &:first-child {
-        margin-right: 7px;
+        margin-right: 15px;
       }
       &:last-child {
-        margin-left: 7px;
+        margin-left: 15px;
       }
     }
   }
@@ -278,11 +298,11 @@
         margin-left: 40px;
       }
 
-      li {
-        p {
-          display: none;
-        }
-      }
+      // li {
+      //   p {
+      //     display: none;
+      //   }
+      // }
     }
   }
 
@@ -307,9 +327,32 @@
       right: 10px;
     }
   }
+
+  .cross-black-bg {
+    position: relative;
+    &:before {
+  
+      top: 35%;
+    }
+  }
 }
 
 @media (max-width: 766px) {
+  .header{
+    &__menu-item {
+      width: 230px;
+      // margin-left: 0px;
+      // margin-bottom: 46px;
+    }
+
+    .slick-dots {
+      li {
+        p {
+          display: none;
+        }
+      }
+    }
+  }
   .home-slider {
     &__slider {
       height: 550px;
@@ -399,6 +442,8 @@
     &__brand {
       max-width: 65px;
     }
+
+    
   }
 
   .about-main {
