--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -66,3 +66,24 @@
 .we-offer-bg--black {
   background: #161616;
 }
+
+
+.two-slider__slider .slick-slide,
+.two-slider__slider .slick-slide[aria-hidden="true"]:not(.slick-cloned)~.slick-cloned[aria-hidden="true"] {
+    transform: scale(0.7);
+    transition: transform 0.3s;
+    -webkit-transform: scale(0.7);
+    -moz-transform: scale(0.7);
+    -ms-transform: scale(0.7);
+    -o-transform: scale(0.7);
+}
+
+.two-slider__slider .slick-center,
+.two-slider__slider .slick-slide[aria-hidden="true"]:not([tabindex="-1"])+.slick-cloned[aria-hidden="true"] {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+    -moz-transform: scale(1);
+    -ms-transform: scale(1);
+    -o-transform: scale(1);
+
+}
