--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,6 @@
 @import "normalize";
 @import "main";
+@import "common";
 
 .header {
   border-bottom: 1px solid rgba(255, 255, 255, 0.4);
@@ -664,4 +665,12 @@
     margin-top: 60px;
   }
 }
+
+.main-black-bg {
+  .contactus_expertise {
+    padding-top: 50px;
+    margin-top: -2px;
+  }
+}
 @import "media";
+@import "responsive";
