--- a/scss/style.scss
+++ b/scss/style.scss
@@ -675,7 +675,7 @@
   }
 }
 
-.main-black-bg {
+.main-black-bg, .about-bg-bg {
   .contactus_expertise {
     padding-top: 50px;
     margin-top: -2px;
