--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,11 +46,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    &.active{
-      .header__dropdown{
+    &.active {
+      .header__dropdown {
         background: rgba(45, 45, 45, 0.8) !important;
       }
-
     }
   }
 
@@ -299,188 +298,11 @@
   margin-top: -5px;
   background: #161616;
   padding-top: 40px;
-  padding-bottom: 170px;
-  &__slider {
-    transition: all 0.5s;
-    width: 100%;
-    margin-top: 200px;
-  }
-
-  &__slider-item {
-    outline: none;
-    margin-left: 80px;
-    margin-right: 80px;
-    height: 610px !important;
-    display: flex !important;
-    align-items: center !important;
-    transition: all 0.5s;
-    position: relative;
-    &:before {
-      position: absolute;
-      content: "";
-      top: 50%;
-      transform: translateY(-50%) scale(1.025);
-      height: 450px;
-      left: 0;
-      right: 0;
-      background: rgba(45, 45, 45, 0.8);
-      transition: all 0.5s;
-      z-index: 1;
-    }
-    &.slick-current {
-      transition: all 0.5s;
-      .two-slider__item-img {
-        height: 610px !important;
-      }
-      &:before {
-        opacity: 0;
-        transition: all 0.5s;
-      }
-
-      .two-slider__inner {
-        opacity: 1;
-        z-index: 2;
-        right: -70px;
-        
-      }
-    }
-  }
-
-  &__item-img {
-    height: 450px !important;
-    width: 100%;
-    height: 100%;
-    transition: all 0.5s;
-    object-fit: cover;
-    transition: all 0.5s;
-    overflow: hidden;
-    transform: scale(1.025);
-    &.hoverpic {
-      transform: scale(1);
-    }
-  }
-
-  &__counter {
-    display: flex;
-    align-items: center;
-    width: 230px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  &__current-slide {
-    color: #a2a2a2;
-  }
-
-  &__line {
-    width: 101px;
-    height: 1px;
-    background: #a1a1a1;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  &__all-slide {
-    color: #616161;
-  }
-
-  &__bottom {
-    margin-top: 45px;
-    display: flex;
-    justify-content: space-between;
-  }
-
-  &__btn {
-    letter-spacing: 0.15em;
-    color: #b7a179;
-    position: relative;
-    cursor: pointer;
-    transition: all 0.3s;
-    &:before {
-      position: absolute;
-      content: "";
-      top: 50%;
-      transform: translateY(-50%);
-      width: 35px;
-      height: 1px;
-      background: #b7a179;
-      transition: all 0.3s;
-    }
-    &.my-disabled {
-      color: #f0eee9;
-      &:before {
-        background: #f0eee9;
-      }
-    }
-    &:hover {
-      color: #ddbf89;
-      &:before {
-        background: #ddbf89;
-      }
-    }
-  }
-
-  &__prev {
-    margin-left: 45px;
-    &:before {
-      right: calc(100% + 10px);
-    }
-  }
-
-  &__next {
-    margin-right: 45px;
-    &:before {
-      left: calc(100% + 10px);
-    }
-  }
-
-  &__inner {
-    width: max-content;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    bottom: 80px;
-    right: 0px;
-    padding: 65px 100px;
-    background: #b7a179;
-    transition: all 0.5s;
-    box-sizing: border-box;
-    opacity: 0;
-    z-index: 0;
-    transition: all 0.5s;
-    &:hover {
-      background: #ddbf89;
-    }
-  }
-
-  &__inner-text {
-    display: block;
-    margin-left: 15px;
-    font-weight: 300;
-    font-size: 30px;
-    letter-spacing: 0.08em;
-    color: #161616;
-  }
-
-  &__inner-link {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-    letter-spacing: 0.15em;
-    color: #585858;
-    transition: all 0.5s;
-  }
-
-  .slick-arrow {
-    position: absolute;
-    opacity: 0;
-    z-index: -1;
-  }
+ 
 
   &__title {
     color: #fff;
-    margin-bottom: 150px;
+    margin-bottom: 50px;
   }
 }
 
@@ -675,7 +497,8 @@
   }
 }
 
-.main-black-bg, .about-bg-bg {
+.main-black-bg,
+.about-bg-bg {
   .contactus_expertise {
     padding-top: 50px;
     margin-top: -2px;
@@ -683,3 +506,36 @@
 }
 @import "media";
 @import "responsive";
+
+
+.home-slider__slider{
+  overflow: hidden !important;
+}
+.home-slider__slider .slick-active + li{
+  /* display: block !important; */
+  opacity: 1 !important;
+  position: relative !important;
+  transform: translateX(0) !important;
+  }
+  .home-slider__slider .slick-active + li + li{
+    /* display: block !important; */
+    opacity: 1 !important;
+    position: relative !important;
+    transform: translateX(0) !important;
+    }
+  .home-slider__slider .slick-active {
+  /* display: block !important; */
+  opacity: 1 !important;
+  position: relative !important;
+  transform: translateX(0) !important;
+  }
+  /* .home-slider__slider .slick-active ~ li{
+  display: block !important;
+  } */
+  .home-slider__slider .slick-dots li{
+    /* display: none; */
+    transform: translateX(100%);
+    opacity: 0;
+    position: absolute;
+    transition: all 1s;
+  }
